force-app/main/default/objects/Badge_Collection__c/Badge_Collection__c.object-meta.xml
<CustomObject>
    <label>Club Badge Collection</label>
    <nameField>
        <label>Badge Collection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Club Badge Collection</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>