force-app/main/default/objects/Badge_Collection__c/fields/badgeFlag__c.field-meta.xml
<CustomField>
    <fullName>badgeFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Badge unlocked by Member</description>
    <label>Badge Unlocked</label>
    <type>Checkbox</type>
</CustomField>