force-app/main/default/objects/Badge_Collection__c/fields/badgeFlagIsTrueDate__c.field-meta.xml
<CustomField>
    <fullName>badgeFlagIsTrueDate__c</fullName>
    <description>Date at which badge is unlocked</description>
    <label>Badge Unlock Date</label>
    <type>Date</type>
</CustomField>