force-app/main/default/objects/Badge_Collection__c/fields/badgeId__c.field-meta.xml
<CustomField>
    <fullName>badgeId__c</fullName>
    <label>Badge</label>
    <referenceTo>Badge_Catalog__c</referenceTo>
    <relationshipLabel>Badges Collection</relationshipLabel>
    <relationshipName>Badges_Collection</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>