force-app/main/default/objects/Badge_Collection__c/fields/isFavorite__c.field-meta.xml
<CustomField>
    <fullName>isFavorite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Favorite Badge</label>
    <type>Checkbox</type>
</CustomField>