force-app/main/default/objects/Badge_Collection__c/fields/member_Id__c.field-meta.xml
<CustomField>
    <fullName>member_Id__c</fullName>
    <label>Club Member</label>
    <referenceTo>Club_MemberShip__c</referenceTo>
    <relationshipLabel>Badges Collection</relationshipLabel>
    <relationshipName>Badges_Collections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>