force-app/main/default/objects/Badge_Collection__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <label>UniqueKey</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>