force-app/main/default/objects/Badge_Collection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>member_Id__c</columns>
    <columns>badgeId__c</columns>
    <columns>badgeFlag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>